Latest on search.js thingy

--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,7 @@
           </div>
 
           <div class="search-div">
-            <input class = "search-msgs" type="text" placeholder="🔍 Search">
+            <input id ="search-mgs-id" class = "search-msgs" type="text" placeholder="🔍 Search">
           </div>
           <div class= "offsetmod dsh-items-upper">
             <div class = "names-disp contact-item" data-username="Ox1a...b12c" data-lastseen="Last seen 2 hours ago">
